Add section borders

--- a/Assignments/lighting.html
+++ b/Assignments/lighting.html
@@ -114,7 +114,10 @@
         section {
             display: inline-block;
             vertical-align: top;
-            margin-right: 3em;
+            padding-left: 0.25em;
+            padding-right: 0.5em;
+            border-style: none dotted none none;
+            border-color: LightGray;
         }
         table {
             width: 100%;
@@ -125,7 +128,7 @@
     </style>
 </head>
 
-<body>
+<body style="display: flex;">
     <section>
         <h3>Canvas:</h3>
         <p style="position: relative;">
