--- a/Assignments/texture_mapping.html
+++ b/Assignments/texture_mapping.html
@@ -38,6 +38,9 @@
     <script type="text/javascript" src="../Common/MV.js"></script>
     <script type="text/javascript" src="texture_mapping.js"></script>
 
+    <link rel="icon" href="/favicon.ico" mce_href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" mce_href="/favicon.ico" type="image/x-icon">
+
     <style type="text/css">
         section {
             display: inline-block;
