--- a/moving_boxes.html
+++ b/moving_boxes.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
-<meta charset="utf-8">
 <head>
+    <meta charset="utf-8"/>
     <style type="text/css">
         canvas {
             display: block;
