--- a/others/pingxx_bigdata_oncall_calendar.html
+++ b/others/pingxx_bigdata_oncall_calendar.html
@@ -5,12 +5,12 @@
     <link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.0.1/fullcalendar.min.css'/>
     <link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.0.1/fullcalendar.print.css'
           media='print'/>
-    <link rel='stylesheet' href='bigdata-oncall-calendar.css'/>
+    <link rel='stylesheet' href='pingxx_bigdata_oncall_calendar.css'/>
 
     <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
     <script src='//cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.2/moment.min.js'></script>
     <script src='//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.0.1/fullcalendar.min.js'></script>
-    <script src='bigdata-oncall-calendar.js'></script>
+    <script src='pingxx_bigdata_oncall_calendar.js'></script>
 
     <title>Ping++ BigData Oncall Calendar</title>
 </head>
