--- a/webgl/tessellation_twist.html
+++ b/webgl/tessellation_twist.html
@@ -43,9 +43,9 @@
     }
     </script>
 
-    <script type="text/javascript" src="../Common/webgl-utils.js"></script>
-    <script type="text/javascript" src="../Common/initShaders.js"></script>
-    <script type="text/javascript" src="../Common/MV.js"></script>
+    <script type="text/javascript" src="common/webgl-utils.js"></script>
+    <script type="text/javascript" src="common/initShaders.js"></script>
+    <script type="text/javascript" src="common/MV.js"></script>
     <script type="text/javascript" src="tessellation_twist.js"></script>
 
     <style type="text/css">
