Disable ordering for tags column

--- a/fun/codeforces_next_problems.html
+++ b/fun/codeforces_next_problems.html
@@ -192,6 +192,7 @@
           });
 
           $('#solvedProblems').DataTable({
+            columnDefs: [{ orderable: false, targets: 3 }],
             order: [[6, 'desc']]
           });
         }
