--- a/fun/codeforces_next_problems.html
+++ b/fun/codeforces_next_problems.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <title>Codeforces Next Problems</title>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
@@ -73,9 +74,7 @@
           $('#mainSolvedNum').text(solvedNum);
 
           nextUnsolvedProblems.forEach(problem => {
-            const url = `https://codeforces.com/problemset/problem/${
-              problem.contestId
-            }/${problem.index}`;
+            const url = `https://codeforces.com/problemset/problem/${problem.contestId}/${problem.index}`;
 
             $('#mainProblems tbody').append(`
               <tr>
@@ -131,9 +130,7 @@
           $('#acmsguruSolvedNum').text(solvedNum);
 
           nextUnsolvedProblems.forEach(problem => {
-            const url = `https://codeforces.com/problemsets/acmsguru/problem/99999/${
-              problem.index
-            }`;
+            const url = `https://codeforces.com/problemsets/acmsguru/problem/99999/${problem.index}`;
 
             $('#acmsguruProblems tbody').append(`
               <tr>
@@ -169,13 +166,9 @@
           solvedProblems.forEach(problem => {
             let url;
             if (problem.problemset === 'MAIN') {
-              url = `https://codeforces.com/problemset/problem/${
-                problem.contestId
-              }/${problem.index}`;
+              url = `https://codeforces.com/problemset/problem/${problem.contestId}/${problem.index}`;
             } else if (problem.problemset === 'ACMSGURU') {
-              url = `https://codeforces.com/problemsets/acmsguru/problem/99999/${
-                problem.index
-              }`;
+              url = `https://codeforces.com/problemsets/acmsguru/problem/99999/${problem.index}`;
             }
 
             $('#solvedProblems tbody').append(`
