--- a/fun/topcoder_next_problems.html
+++ b/fun/topcoder_next_problems.html
@@ -108,7 +108,8 @@
           "https://api.github.com/repos/charles-wangkai/topcoder";
 
         const PROBLEM_DISPLAY_NAME_TO_ACTUAL = {
-          DitherCounter: "ImageDithering"
+          DitherCounter: "ImageDithering",
+          Yahtzee: "YahtzeeScore"
         };
 
         const problemNameToSubmission = {};
