--- a/fun/topcoder_next_problems.html
+++ b/fun/topcoder_next_problems.html
@@ -109,7 +109,8 @@
 
         const PROBLEM_DISPLAY_NAME_TO_ACTUAL = {
           DitherCounter: "ImageDithering",
-          Yahtzee: "YahtzeeScore"
+          Yahtzee: "YahtzeeScore",
+          DivDigits: "DivisorDigits"
         };
 
         const problemNameToSubmission = {};
