--- a/fun/topcoder_next_problems.html
+++ b/fun/topcoder_next_problems.html
@@ -110,7 +110,8 @@
         const PROBLEM_DISPLAY_NAME_TO_ACTUAL = {
           DitherCounter: "ImageDithering",
           Yahtzee: "YahtzeeScore",
-          DivDigits: "DivisorDigits"
+          DivDigits: "DivisorDigits",
+          MarginCalculator: "ProfitCalculator"
         };
 
         const problemNameToSubmission = {};
