--- a/fun/topcoder_next_problems.html
+++ b/fun/topcoder_next_problems.html
@@ -12,7 +12,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
